apps/clubs/crabe/web/staging/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: staging-crabe-ingress
spec:
  virtualhost:
    fqdn: staging.atelier.crabe.etsmtl.club
    tls:
      secretName: staging-crabe-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: crabe-svc
          port: 8000
