apps/clubs/crabe/web/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-crabe-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-etsmtl
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: staging-crabe-tls
      hosts:
        - staging.atelier.crabe.etsmtl.club
  rules:
    - host: staging.atelier.crabe.etsmtl.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: crabe-svc
                port:
                  number: 8000
